tests/frontend_tests/error_declaration.c
int main() {
  // error: mismatched parentheses in declaration at '('
  int (var;
}
